--- a/action.yml
+++ b/action.yml
@@ -19,5 +19,7 @@ runs:
       shell: bash
     - run: echo ${{ github.action_path }}
       shell: bash
+    - run: ls ${{ github.action_path }}
+      shell: bash
     - run: ${{ github.action_path }}/goodbye.sh
       shell: bash
