--- a/action.yml
+++ b/action.yml
@@ -21,5 +21,5 @@ runs:
       shell: bash
     - run: ls ${{ github.action_path }}
       shell: bash
-    - run: ${{ github.action_path }}/goodbye.sh
+    - run: sudo ${{ github.action_path }}/goodbye.sh
       shell: bash
