--- a/action.yml
+++ b/action.yml
@@ -21,5 +21,7 @@ runs:
       shell: bash
     - run: ls ${{ github.action_path }}
       shell: bash
-    - run: sudo ${{ github.action_path }}/goodbye.sh
+    - run: |
+        cd ${{ github.action_path }}
+        ./goodbye.sh
       shell: bash
