--- a/action.yml
+++ b/action.yml
@@ -17,11 +17,9 @@ runs:
     - id: random-number-generator
       run: echo "::set-output name=random-id::$(echo $RANDOM)"
       shell: bash
-    - run: echo ${{ github.action_path }}
-      shell: bash
-    - run: ls ${{ github.action_path }}
-      shell: bash
     - run: |
         cd ${{ github.action_path }}
-        ./goodbye.sh
+        ls -l
+      shell: bash
+    - run: ${{ github.action_path }}/goodbye.sh
       shell: bash
